fix: not showing scroll on chrome

--- a/src/components/sq-modal/sq-modal.component.scss
+++ b/src/components/sq-modal/sq-modal.component.scss
@@ -1,4 +1,5 @@
 .modal {
+  min-height: auto;
   &.need-priority {
     z-index: 1081;
   }
